  * Improved dataset __str__ method: code refactoring with read-only dataset widgets (!DataItem: added methods 'format_string' and 'get_string_value', !DataSet: added method 'to_string')
  * Added coding guidelines to the documentation
  * guidata.dataset.qtwidget: added specific widget (!ShowBooleanWidget) for read-only display of bool items (text is striked out when value is False)

----

== Version 1.3.1 ==

=== Bug fixes (since v1.3.0) ===

  * setup.py: added svg icons to data files
  * gettext helpers were not working on Linux (Windows install pygettext was hardcoded)

=== Other changes (since v1.3.0) ===

  * hdf5io: printing error messages in sys.stderr + added more infos when failing to load attribute

----

== Version 1.3.0 ==

=== Bug fixes (since v1.2.5) ===

  * setup.py: added svg icons to data files
  * gettext helpers were not working on Linux (Windows install pygettext was hardcoded)
  * !DataSet/bugfix: comment/title options now override the !DataSet class __doc__ attribute
  * Added missing option 'basedir' for !FilesOpenItem
  * !DirectoryItem: fixed missing child_title attribute bug
  * For all !DataSet GUI representation, the comment text is now word-wrapped
  * Bugfix: recent versions of !PyQt don't like the QApplication reference to be stored in modules (why is that?!)
  * Bugfix/tests: always keep a reference to the QApplication instance

=== Other changes (since v1.2.5) ===

  * setup.py: added source archive download url
  * Tests: now creating real temporary files and cleaning up at exit
  * qtAllow a callback on !LineEditWidget to notify about text changes (use set_prop("display", "callback", callback))
  * qthelpers: provide wrapper for qt.getOpen/!SaveFileName to work around win32 bug
  * qtwidgets: optionally hide apply button in !DataSetEditGroupBox
  * added module guidata.qtwidgets (moved some generic widgets from guidata.qthelpers and from other external packages)